<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>tdt4100-v2021</groupId>
  <artifactId>project</artifactId>
  <version>0.0.2-SNAPSHOT</version>
  <name>TDT4100-Project</name>
  <packaging>jar</packaging>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub Packages</name>
      <url>https://maven.pkg.github.com/tjespe/minesweeper</url>
    </repository>
  </distributionManagement>
  
  <dependencies>
  	<!--  JavaFX FXML -->
  	<dependency>
  		<groupId>org.openjfx</groupId>
  		<artifactId>javafx-fxml</artifactId>
  		<version>16-ea+5</version>
  	</dependency>
  	
  	<!--  JUnit 5 -->
  	<dependency>
  		<groupId>org.junit.jupiter</groupId>
  		<artifactId>junit-jupiter-engine</artifactId>
  		<version>5.7.0</version>
  	</dependency>
  </dependencies>
  
  <build>
  	<plugins>
  		<plugin>
  			<artifactId>maven-compiler-plugin</artifactId>
  			<version>3.8.0</version>
  			<configuration>
  				<release>15</release>
  				<compilerArgs>
  					--enable-preview
  				</compilerArgs>
  			</configuration>
  		</plugin>
  		<plugin>
  			<artifactId>maven-surefire-plugin</artifactId>
  			<version>3.0.0-M5</version>
  			<configuration>
  				<argLine>--enable-preview</argLine>
  			</configuration>
  		</plugin>
  		<plugin>
  			<artifactId>maven-failsafe-plugin</artifactId>
  			<version>3.0.0-M5</version>
  			<configuration>
  				<argLine>--enable-preview</argLine>
  			</configuration>
  		</plugin>
  		
  		<plugin>
			<artifactId>maven-shade-plugin</artifactId>
			<version>3.2.1</version>
			<executions>
				<execution>
					<phase>package</phase>
					<goals>
						<goal>shade</goal>
					</goals>
					<configuration>
  						<argLine>--enable-preview</argLine>
						<transformers>
							<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
								<mainClass>minesweeper.fxui.MinesweeperApp</mainClass>
							</transformer>
						</transformers>
					</configuration>
				</execution>
			</executions>
		</plugin>
  	</plugins>
  </build>
</project>